--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,12 +4,14 @@
     <string name="axis_y_label">Average RNs</string>
     <string name="axis_x_label">Trail Runs</string>
     <string name="per_second">per second</string>
+    <string name="per_second_30">per 30 seconds</string>
     <string name="per_minute">per minute</string>
 
     <string name="min_y">Min Ave RN</string>
     <string name="max_y">Max Ave RN</string>
 
-    <string name="start">Start RN trails</string>
+    <string name="start">Start Random Number Trails</string>
+    <string name="start_label">Click to start the random number generator</string>
     <string name="stop">Stop</string>
     <string name="save">Save Graph</string>
 </resources>
