--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Field Tracker</string>
+    <string name="app_name">Field Sensor</string>
 
     <string name="axis_y_label">Average RNs</string>
     <string name="axis_x_label">Trail Runs</string>
@@ -14,4 +14,8 @@
     <string name="start_label">Click to start the random number generator</string>
     <string name="stop">Stop</string>
     <string name="save">Save Graph</string>
+
+    <string name="action_search">Search</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_share">Share</string>
 </resources>
