--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,13 @@
     <string name="axis_y_label">Average RNs</string>
     <string name="axis_x_label">Trail Runs</string>
     <string name="per_second">per second</string>
+    <string name="per_second_10">per 10 seconds</string>
     <string name="per_second_30">per 30 seconds</string>
     <string name="per_minute">per minute</string>
 
+    <string name="descr">Description</string>
+    <string name="frequency">Frequency</string>
+    <string name="duration">Duration</string>
     <string name="min_y">Min Ave RN</string>
     <string name="max_y">Max Ave RN</string>
 
